<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PersonActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/personActivityFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/personFirstNameLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/firstNameBold"
                android:textSize="24sp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"/>

            <TextView
                android:id="@+id/personFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="8dp"/>



        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#a8b2b5" />

        <LinearLayout
            android:id="@+id/personActivityLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/personLastNameLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lastNameBold"
                android:textSize="24sp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"/>

            <TextView
                android:id="@+id/personLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="8dp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#a8b2b5" />

        <LinearLayout
            android:id="@+id/personActivityGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/personGenderLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/genderBold"
                android:textSize="24sp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"/>
            <TextView
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="8dp"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#a8b2b5" />


        <ExpandableListView
            android:id="@+id/expandableEvents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dividerHeight="0.5dp"
            android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft"
            android:divider="@android:color/darker_gray"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>